<resources>


    <string name="action_delete">削除</string>
    <string name="action_search">作品を探す</string>
    <string name="action_settings">設定</string>
    <string name="action_share">共有</string>
    <string name="app_name">nico-manga</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">76a70c0d-f24a-4e84-8d78-fdaac32d9d8b</string>
    <string name="confirm_disable">次回以降は表示しない</string>
    <string name="content_menu_continue">続きから読む</string>
    <string name="content_menu_continue_retry">再読込</string>
    <string name="define_roundedimageview" />
    <string name="error_content_not_playable">この作品は閲覧できるエピソードがありません。</string>
    <string name="error_default">"結果の取得に
失敗しました。"</string>
    <string name="error_default_authentication">"ログインに失敗しました。

しばらく時間を置いて再度お試しください。"</string>
    <string name="error_empty">結果が0件でした。</string>
    <string name="error_fatal">"予期しないエラーが発生しました。
お手数ですが再インストールを実行してください。"</string>
    <string name="error_favorite_limit_exceeded">"お気に入り登録上限を越えました。

詳しくはヘルプをご確認ください。"</string>
    <string name="error_internal_server">"サーバー側でエラーが発生しました。

しばらく時間を置いて再度お試しください。"</string>
    <string name="error_invalid_time">"端末の時刻が不正です。

現在の時刻に合わせてください。"</string>
    <string name="error_maintenance">ただいまサービスメンテナンス中です。</string>
    <string name="error_network_disconnected">"回線状態が不安定です。

しばらく時間を置いて再度お試しください。"</string>
    <string name="error_not_found">既に削除されている、もしくは存在しません。</string>
    <string name="error_unauthorized">"現在ログイン状態ではありません。

お手数ですがログインしてください。"</string>
    <string name="error_undefined">予期しないエラーが発生しました。</string>
    <string name="guest_user_name">ゲスト</string>
    <string name="home_favorite_description">"作品をお気に入り登録すると、
更新情報がここに表示されます。"</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="player_comment_error_block">このエピソードにはコメント投稿ができません(女性限定など)</string>
    <string name="player_comment_error_default">コメント投稿に失敗しました</string>
    <string name="player_comment_error_length">コメント投稿の文字数上限を超えています</string>
    <string name="player_error_value_empty">1文字以上入力する必要があります</string>
    <string name="player_favorite_add">お気に入りに追加する</string>
    <string name="player_favorite_already_add">お気に入りに追加済み</string>
    <string name="player_tag_empty">"登録されているタグは
ありません。"</string>
    <string name="player_tag_error_default">タグの登録に失敗しました</string>
    <string name="player_tag_error_length">タグの文字数上限は20文字です</string>
    <string name="player_tag_error_limit_exceeded">タグの登録上限を超えています</string>
    <string name="player_tag_error_need_authentication">タグの登録にはログインが必要です</string>
    <string name="player_tag_error_value_too_long">タグの文字数上限を超えています</string>
    <string name="player_tag_limit">タグの登録上限です</string>
    <string name="player_tag_loading">タグを登録中です</string>
    <string name="review_message">"アプリの使い心地はいかがですか？
気に入ってもらえましたら、ぜひ評価をお願いします！"</string>
    <string name="screen_about">このアプリについて</string>
    <string name="screen_authentication">ログイン</string>
    <string name="screen_comment_allegation">違反コメントの通報</string>
    <string name="screen_content_list">作品一覧</string>


    <string name="screen_how_to_create">マンガを投稿するには？</string>

    <string name="screen_license">ライセンス</string>
    <string name="screen_manga_allegation">違反マンガの通報</string>
    <string name="screen_notification_setting">通知設定</string>



    <string name="screen_widget_setting">ウィジェットの設定</string>
    <string name="share_app">無料で雑誌やWEBの人気マンガが読める！ %1$s #ニコニコ漫画</string>













    <string name="btn_retry">リトライ</string>
    <string name="loading_complete">all loading</string>
    <string name="rank_toolbar">公式マンガ</string>

    <!--导航toggle-->
    <string name="nav_open">nav_open</string>
    <string name="nav_close">nav_close</string>

    <!--Nav 按钮-->
    <string name="screen_feedback">ご意見・ご要望</string>
    <string name="screen_rule">利用規約</string>
    <string name="screen_info">お知らせ</string>
    <string name="screen_setting">設定・その他</string>
    <string name="screen_read_history">視聴履歴</string>
    <string name="screen_favorite">お気に入り</string>
    <string name="screen_search">作品を探す</string>
    <string name="screen_home">ホーム</string>
    <string name="screen_official">公式マンガ</string>
    <string name="screen_ranking">ランキング</string>

    <!-- 1-7 命名编号:方便SparseArray排序-->
    <string name="rank_1_all">総合</string>
    <string name="rank_2_shonen">少年マンガ</string>
    <string name="rank_3_seinen">青年マンガ</string>
    <string name="rank_4_shojo">少女マンガ</string>
    <string name="rank_5_yonkoma">４コママンガ</string>
    <string name="rank_6_other">その他</string>
    <string name="rank_7_fan">ファンコミック</string>
    <string name="rank_link_to">%1$sランキングへ</string>

    <string name="rank_all">@string/rank_1_all</string>
    <string name="rank_shonen">@string/rank_2_shonen</string>
    <string name="rank_seinen">@string/rank_3_seinen</string>
    <string name="rank_shojo">@string/rank_4_shojo</string>
    <string name="rank_yonkoma">@string/rank_5_yonkoma</string>
    <string name="rank_other">@string/rank_6_other</string>
    <string name="rank_fan">@string/rank_7_fan</string>


    <string-array name="rankingTabSections">
        <item>@string/rank_1_all</item>
        <item>@string/rank_2_shonen</item>
        <item>@string/rank_3_seinen</item>
        <item>@string/rank_4_shojo</item>
        <item>@string/rank_5_yonkoma</item>
        <item>@string/rank_6_other</item>
        <item>@string/rank_7_fan</item>
    </string-array>


    <!--主页 ViewPager Tab选项-->
    <string-array name="homeTabSections">
        <item>気に入る新着</item>
        <item>TOP</item>
        <item>注目作品</item>
        <item>ランキング</item>
        <item>公式マンガ</item>
    </string-array>

    <!--rank spinner list-->
    <string-array name="rankSpinner">
        <item>毎時</item>
        <item>デイリー</item>
        <item>週間</item>
        <item>月間</item>
        <item>合計</item>
    </string-array>
    <string name="rank_link_in">%1$sランキング</string>


    <!--episode 的描述详细-->
    <string name="scroll">スクロール</string>
    <string name="serial">連載中</string>
</resources>
